More minecraft schenanigans

--- a/minecraft/Dockerfile
+++ b/minecraft/Dockerfile
@@ -1,13 +1,11 @@
 FROM azul/zulu-openjdk:8
 
-RUN useradd minecraft \
- && install -o minecraft -g minecraft -d /home/minecraft
+RUN install -d -o root -g root /opt/minecraft
 
-USER minecraft
-WORKDIR /home/minecraft
+ADD https://launcher.mojang.com/v1/objects/bb2b6b1aefcd70dfd1892149ac3a215f6c636b07/server.jar /opt/minecraft/server.jar
+COPY eula.txt /opt/minecraft/eula.txt
 
-ADD --chown=minecraft https://launcher.mojang.com/v1/objects/bb2b6b1aefcd70dfd1892149ac3a215f6c636b07/server.jar /home/minecraft/server.jar
-COPY --chown=minecraft eula.txt /home/minecraft/eula.txt
+WORKDIR /opt/minecraft
 
 ENTRYPOINT ["/usr/bin/java"]
-CMD ["-Xmx1024M", "-Xms1024M", "-jar", "/home/minecraft/server.jar", "nogui"]
+CMD ["-Xmx1024M", "-Xms1024M", "-jar", "/opt/minecraft/server.jar", "nogui"]
