--- a/minecraft/k8s/service.yaml
+++ b/minecraft/k8s/service.yaml
@@ -2,11 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: minecraft
+  annotations:
+   external-dns.alpha.kubernetes.io/hostname: minecraft.gcp.kyiro.net
 spec:
   selector:
     role: server
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 25565
     targetPort: 25565
+    nodePort: 30000
     protocol: TCP
