Use 60s TTL for external DNS records to cater for pre-emptible replacements

--- a/minecraft/k8s/service.yaml
+++ b/minecraft/k8s/service.yaml
@@ -4,6 +4,7 @@ metadata:
   name: minecraft
   annotations:
    external-dns.alpha.kubernetes.io/hostname: minecraft.gcp.kyiro.net
+   external-dns.alpha.kubernetes.io/ttl: "60"
 spec:
   selector:
     role: server
