Switch Minecraft to statefulset

--- a/minecraft/k8s/kustomization.yaml
+++ b/minecraft/k8s/kustomization.yaml
@@ -7,9 +7,8 @@ commonLabels:
   app: minecraft
 
 resources:
-- deployment.yaml
+- statefulset.yaml
 - service.yaml
-- pvc.yaml
 
 configMapGenerator:
 - name: server-config
