--- a/minecraft/k8s/statefulset.yaml
+++ b/minecraft/k8s/statefulset.yaml
@@ -1,11 +1,12 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: minecraft-server
   labels:
     role: server
 spec:
   replicas: 1
+  serviceName: minecraft
   selector:
     matchLabels:
       role: server
@@ -41,6 +42,13 @@ spec:
       - name: config
         configMap:
           name: server-config
-      - name: world
-        persistentVolumeClaim:
-          claimName: minecraft-world
+  volumeClaimTemplates:
+  - metadata:
+      name: world
+    spec:
+      accessModes:
+      - ReadWriteOnce
+      storageClassName: standard-ssd
+      resources:
+        requests:
+          storage: 10Gi
